--- a/style.css
+++ b/style.css
@@ -43,6 +43,28 @@ ul, li {
     text-align: center;
     font-size: 20px;
     padding: 35px;
+    position: relative;
+}
+
+.introText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+    z-index: 1; 
+}
+
+#startButton {
+    position: absolute; 
+    top: 60%;
+    left: 40%;
+    z-index: 1; 
 }
 
 .actionText {
