--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, rgba(89, 19, 252, 0.603),rgba(0, 0, 0, 0.875)),url(img/bg1.png);
+    background: linear-gradient(to bottom, rgba(89, 19, 252, 0.603),rgba(0, 0, 0, 0.875)),url(img/vista1.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
