--- a/style.css
+++ b/style.css
@@ -49,13 +49,13 @@ ul, li {
 .introText {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     position: absolute; 
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    height: 85%;
+    /* background-color: rgba(0, 0, 0, 0.5);  */
     color: white;
     z-index: 1; 
 }
@@ -67,6 +67,17 @@ ul, li {
     z-index: 2; /* Ensuring this is higher than the background overlay */
     border-radius: 10px;
     margin-top: 5px;
+    margin-bottom: auto;
+}
+
+.characterbox {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: max-content;
+    margin-left: 10px;
 }
 
 label {
